force-app/main/default/objects/HAM_Notification__c/HAM_Notification__c.object-meta.xml
<CustomObject>
    <description>Stores the individual notification records for portal users. This acts as the &quot;Inbox&quot; for the portal.</description>
    <label>HAM Notification</label>
    <nameField>
        <displayFormat>Date-{YYYY}/{MM}-N#{00000}</displayFormat>
        <label>HAM Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>