force-app/main/default/objects/HAM_Notification__c/fields/HAM_Action_URL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Action_URL__c</fullName>
    <description>Relative URL for navigation (e.g., /connection/recordId).</description>
    <inlineHelpText>Relative URL for navigation (e.g., /connection/recordId).</inlineHelpText>
    <label>HAM Action URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>