force-app/main/default/objects/HAM_Notification__c/fields/HAM_Body__c.field-meta.xml
<CustomField>
    <fullName>HAM_Body__c</fullName>
    <description>The detailed message content.</description>
    <inlineHelpText>The detailed message content.</inlineHelpText>
    <label>HAM Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>