force-app/main/default/objects/HAM_Notification__c/fields/HAM_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The portal user (Contact) who will receive the notification.</description>
    <inlineHelpText>The portal user (Contact) who will receive the notification.</inlineHelpText>
    <label>HAM Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM Notifications</relationshipLabel>
    <relationshipName>HAM_Notifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>