force-app/main/default/objects/HAM_Notification__c/fields/HAM_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Expiration_Date__c</fullName>
    <description>Calculated at insert (Today + 30). Used by Batch Apex for cleanup.</description>
    <inlineHelpText>Calculated at insert (Today + 30). Used by Batch Apex for cleanup.</inlineHelpText>
    <label>HAM Expiration Date</label>
    <type>Date</type>
</CustomField>