force-app/main/default/objects/HAM_Notification__c/fields/HAM_Is_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Dismissed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, hidden from Web UI &quot;Mark All Read&quot; logic but exists in DB</description>
    <inlineHelpText>If True, hidden from Web UI &quot;Mark All Read&quot; logic but exists in DB</inlineHelpText>
    <label>HAM Is Dismissed</label>
    <type>Checkbox</type>
</CustomField>