force-app/main/default/objects/HAM_Notification__c/fields/HAM_Sender_Contact__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sender_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to sender contact to fetch name and profile photo to be displayed in notification</description>
    <inlineHelpText>This is a lookup to sender contact to fetch name and profile photo to be displayed in notification</inlineHelpText>
    <label>HAM Sender Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM Notifications (HAM Sender Contact)</relationshipLabel>
    <relationshipName>HAM_Notifications1</relationshipName>
    <type>Lookup</type>
</CustomField>