force-app/main/default/objects/HAM_Notification__c/fields/HAM_Source_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_Source_Object_ID__c</fullName>
    <description>The ID of the record that triggered this (e.g., Connection ID). Used for deep linking.</description>
    <inlineHelpText>The ID of the record that triggered this (e.g., Connection ID). Used for deep linking.</inlineHelpText>
    <label>HAM Source Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>