force-app/main/default/objects/HAM_Notification__c/fields/HAM_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Source_Type__c</fullName>
    <label>HAM Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connection</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>