force-app/main/default/objects/HAM_Notification__c/fields/HAM_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Status__c</fullName>
    <label>HAM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unread</fullName>
                <default>true</default>
                <label>Unread</label>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Actioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>