force-app/main/default/objects/HAM_Notification__c/fields/HAM_Title__c.field-meta.xml
<CustomField>
    <fullName>HAM_Title__c</fullName>
    <description>The header text of the notification.</description>
    <inlineHelpText>The header text of the notification.</inlineHelpText>
    <label>HAM Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>